src/objects/EntitlementAssignment__c.object
<CustomObject>
    <fields>
        <fullName>CaseOrigin__c</fullName>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Claim</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Inbound Correspondence</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Walk-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Field for notes/comments regarding configuration records.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EntitlementAssignmentExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>EntitlementAssignmentExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EntitlementName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Entitlement Name</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Entitlement Assignments</relationshipLabel>
        <relationshipName>Entitlement_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Group ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Originator_Type__c</fullName>
        <label>Originator Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Originator_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject_Type__c</fullName>
        <label>Subject Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group/Employer</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>General Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TTS_Access__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TTS Access</label>
        <referenceTo>TTS_Access__c</referenceTo>
        <relationshipLabel>Entitlement Assignments</relationshipLabel>
        <relationshipName>Entitlement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TTS_ExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TTS_ExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic1__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <label>Entitlement Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EntitlementName__c</columns>
        <columns>IsActive__c</columns>
        <columns>SortOrder__c</columns>
        <columns>ProfileName__c</columns>
        <columns>RoleName__c</columns>
        <columns>Originator_Type__c</columns>
        <columns>CaseOrigin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>EntitlementName__c</columns>
        <columns>IsActive__c</columns>
        <columns>ProfileName__c</columns>
        <columns>RoleName__c</columns>
        <columns>Originator_Type__c</columns>
        <columns>CaseOrigin__c</columns>
        <columns>Subtype__c</columns>
        <columns>Topic1__c</columns>
        <columns>Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Find</fullName>
        <columns>NAME</columns>
        <columns>EntitlementName__c</columns>
        <columns>IsActive__c</columns>
        <columns>SortOrder__c</columns>
        <columns>ProfileName__c</columns>
        <columns>RoleName__c</columns>
        <columns>Originator_Type__c</columns>
        <columns>CaseOrigin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic1__c</field>
            <operation>equals</operation>
            <value>View Payments</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Claim Processing &amp; Review</value>
        </filters>
        <filters>
            <field>Subtype__c</field>
            <operation>equals</operation>
            <value>Claim Adjustment</value>
        </filters>
        <label>Find</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Nick_personal</fullName>
        <columns>NAME</columns>
        <columns>EntitlementAssignmentExternalID__c</columns>
        <columns>IsActive__c</columns>
        <columns>SortOrder__c</columns>
        <columns>CaseOrigin__c</columns>
        <columns>EntitlementName__c</columns>
        <columns>ProfileName__c</columns>
        <columns>RoleName__c</columns>
        <columns>Topic1__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Nick personal</label>
    </listViews>
    <listViews>
        <fullName>Topic</fullName>
        <columns>NAME</columns>
        <columns>EntitlementName__c</columns>
        <columns>IsActive__c</columns>
        <columns>ProfileName__c</columns>
        <columns>RoleName__c</columns>
        <columns>Originator_Type__c</columns>
        <columns>CaseOrigin__c</columns>
        <filterScope>Everything</filterScope>
        <label>Topic</label>
    </listViews>
    <nameField>
        <displayFormat>EA-{000000000}</displayFormat>
        <label>Entitlement Assignment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entitlement Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_updating_Topic_Type_Subtype</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISCHANGED(Type__c) || ISCHANGED(Subtype__c) || ISCHANGED(Topic1__c),true,false)</errorConditionFormula>
        <errorMessage>Topic, Type and Subtype fields cannot be edited.</errorMessage>
    </validationRules>
</CustomObject>